[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.3", features = [
    "full",
    "node-bindings",
    "signer-local",
    "provider-http",
    "provider-ws",
    "rpc-types",
    "contract",
    "sol-types",
    "pubsub",
] }
tokio = { version = "1", features = ["full", "sync"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
eyre = "0.6"
hex = "0.4"
dashmap = "6"
dotenvy = "0.15"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
